--- a/Busfinder/res/menu/menu.xml
+++ b/Busfinder/res/menu/menu.xml
@@ -3,6 +3,7 @@
     <item android:id="@+id/itemPrefs" android:title="@string/titlePrefs" android:icon="@android:drawable/ic_menu_preferences"></item>
     <item android:id="@+id/itemKML" android:title="@string/titleKML"></item>
     <item android:id="@+id/itemLocation" android:title="@string/titleLocation"></item>
+    <item android:id="@+id/itemInfo" android:title="@string/titleInfo"></item>
     
 
 </menu>
